--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+#container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
+#navbar {
+  height: 10vh;
+}
+
+#main {
+  height: 90vh;
+}
