--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,39 @@ body {
   width: 50vw;
   height: 100vh;
   background-color: white;
+  position: fixed;
+  left: -50vw;
+  top: 0vh;
+  padding-top: 5vh;
+}
 
+.show-nav {
+  animation: slide-in 1s;
+  animation-fill-mode: forwards;
+}
+
+.hide-nav {
+  animation: slide-out 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide-in {
+  from { left: -50vw; }
+  to { left: 0vw; }
+}
+
+@keyframes slide-out {
+  from { left: 0vw; }
+  to { left: -50vw; }
+}
+
+#menu-icon {
+  z-index: 2;
+  position: fixed;
+}
+
+.menu-link {
+  color: black;
+  display: block;
+  padding: 2px;
 }
