--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   left: -50vw;
   top: 0vh;
   padding-top: 5vh;
+  box-shadow:
 }
 
 .show-nav {
@@ -28,24 +29,34 @@ body {
 }
 
 @keyframes slide-in {
-  0% { left: -50vw; }
-  100% { left: 0vw; }
+  0% {
+    left: -50vw;
+  }
+  100% {
+    left: 0vw;
+    box-shadow: 0vh 2vh 15vh 1vh black;
+  }
 }
 
 @keyframes slide-out {
-  from { left: 0vw; }
+  from {
+    left: 0vw;
+    box-shadow: 0vh 2vh 15vh 1vh black;
+  }
   to { left: -50vw; }
 }
 
 #menu-icon {
   z-index: 2;
+  padding-top: 2vh;
+  padding-left: 2vh;
   position: fixed;
 }
 
 .menu-link {
   color: black;
   display: block;
-  padding: 2px;
+  padding: 2vh;
 }
 
 #main-page {
