--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@ body {
   font-size: 3vh;
 }
 
+#i-am {
+  text-align: center;
+  font-size: 2vh;
+}
+
 #bottom-line {
   border-top: 0.1vh black solid;
   border-radius: 3em;
