working typing function

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
   font-family: 'Reenie Beanie', cursive;
 }
 
-#i-am {
+.typing {
   text-align: center;
   font-size: 3vh;
   font-family: 'Abel', sans-serif;
