--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,8 @@ body {
 
 #about-text {
   margin: 0vh 2vh 5vh 2vh;
+  font-family: 'Abel', sans-serif;
+  text-align: center;
 }
 
 #slider {
@@ -126,6 +128,24 @@ body {
 
 #portfolio-page {
   padding: 5vh;
+}
+
+#welcome-portfolio {
+  font-size: 4.5vh;
+  font-family: 'Reenie Beanie', cursive;
+  margin: 7vh 0vh 3vh 0vh;
+}
+
+#portfolio-text {
+  font-size: 2.5vh;
+  margin: 0vh 2vh 5vh 2vh;
+  font-family: 'Abel', sans-serif;
+  text-align: center;
+}
+
+.project-text {
+  font-family: 'Abel', sans-serif;
+  text-align: center;
 }
 
 #resume-page {
