adds link to resume pdf

--- a/src/App.css
+++ b/src/App.css
@@ -204,10 +204,7 @@ a, button {
   cursor: pointer;
 }
 
-#resume-page {
-  padding: 5vh;
-}
-
 #contact-page {
   padding: 5vh;
+  height: 100vh;
 }
