--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: hidden;
   background-image: url('marble.jpg');
   background-color: rgb(238,238,240);
   -webkit-box-sizing: border-box;
@@ -74,6 +73,10 @@ a, button {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+#first-menu-link {
+  margin-top: 3vh;
+}
+
 .menu-link {
   color: black;
   display: block;
@@ -85,11 +88,13 @@ a, button {
 .menu-link:active {
   color: black;
   opacity: 0.8;
+  font-weight: bold;
 }
 
-.menu-link:active {
+.menu-link:visited {
   color: black;
   opacity: 0.8;
+  font-weight: bold;
 }
 
 #main-page {
@@ -125,6 +130,8 @@ a, button {
   text-align: center;
   font-size: 3vh;
   font-family: 'Abel', sans-serif;
+  width: 55vw;
+  margin: auto;
 }
 
 #bottom-line {
@@ -145,13 +152,21 @@ a, button {
 }
 
 #about-text {
-  margin: 0vh 2vh 5vh 2vh;
+  margin: 0vh 2vh 2vh 2vh;
   font-family: 'Abel', sans-serif;
   text-align: center;
 }
 
 .photo {
   border-radius: 0.5em;
+}
+
+#message-me-text {
+  margin: 0vh 2vh 5vh 2vh;
+  padding-bottom: 5vh;
+  font-family: 'Abel', sans-serif;
+  font-size: 3vh;
+  text-align: center;
 }
 
 #slider {
