--- a/src/App.css
+++ b/src/App.css
@@ -170,10 +170,6 @@ a, button {
   text-align: center;
 }
 
-#slider {
-  margin-bottom: 0vh;
-}
-
 #buttons {
   margin-top: 2vh;
   margin-bottom: 2vh;
@@ -233,6 +229,143 @@ a, button {
   height: 100vh;
 }
 
+/* iPhone 6,7,8 landscape */
+
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : landscape) {
+
+  body {
+    overflow: scroll;
+    background-size: cover;
+  }
+
+  #nav {
+    width: 30vw;
+    left: -80vw;
+  }
+
+  @keyframes slide-in {
+    0% {
+      left: -80vw;
+    }
+    100% {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+  }
+
+  @keyframes slide-out {
+    from {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+    to {
+      left: -80vw;
+    }
+  }
+
+  .show-nav {
+    animation: slide-in 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .hide-nav {
+    animation: slide-out 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .menu-link {
+    font-size: 4vh;
+  }
+
+  #top-line {
+    border-top: 0.2vh black solid;
+    margin: 8vh 40vh;
+  }
+
+  #name {
+    font-size: 8vh;
+  }
+
+  .typing {
+    font-size: 5vh;
+  }
+
+  #bottom-line {
+    border-top: 0.2vh black solid;
+    border-radius: 3em;
+    margin: 7vh 30vh;
+  }
+
+  #about-name {
+    font-size: 10vh;
+  }
+
+  #about-text {
+    font-size: 4vh;
+  }
+
+  .photo {
+    height: 70vh;
+  }
+
+  #about-slider {
+    height: 75vh;
+    margin: auto;
+  }
+
+  #about-carousel {
+    width: 40vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #message-me-text {
+    margin-top: 2vh;
+    font-size: 5vh;
+  }
+
+  #welcome-portfolio {
+    font-size: 7vw;
+  }
+
+  #portfolio-text {
+    font-size: 3vw;
+  }
+
+  .project-text {
+    font-size: 2vw;
+  }
+
+  .links {
+    font-size: 2vw;
+    margin-bottom: 2vh;
+  }
+
+  #portfolio-slider {
+    height: 80vh;
+  }
+
+  #portfolio-carousel {
+    width: 70vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #project-text {
+    margin-bottom: 0vh;
+  }
+
+  #portfolio-gif {
+    width: 60vw;
+    height: 54vh;
+  }
+
+
+ }
+
 /* iPhone landscape */
 
 @media only screen
@@ -244,6 +377,92 @@ and (orientation : landscape) {
   body {
     overflow: scroll;
     background-size: cover;
+  }
+
+  #nav {
+    width: 30vw;
+    left: -80vw;
+  }
+
+  @keyframes slide-in {
+    0% {
+      left: -80vw;
+    }
+    100% {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+  }
+
+  @keyframes slide-out {
+    from {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+    to {
+      left: -80vw;
+    }
+  }
+
+  .show-nav {
+    animation: slide-in 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .hide-nav {
+    animation: slide-out 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .menu-link {
+    font-size: 4vh;
+  }
+
+  #top-line {
+    border-top: 0.2vh black solid;
+    margin: 8vh 40vh;
+  }
+
+  #name {
+    font-size: 8vh;
+  }
+
+  .typing {
+    font-size: 5vh;
+  }
+
+  #bottom-line {
+    border-top: 0.2vh black solid;
+    border-radius: 3em;
+    margin: 7vh 30vh;
+  }
+
+  #about-name {
+    font-size: 10vh;
+  }
+
+  #about-text {
+    font-size: 4vh;
+  }
+
+  .photo {
+    height: 70vh;
+  }
+
+  #about-slider {
+    height: 75vh;
+    margin: auto;
+  }
+
+  #about-carousel {
+    width: 40vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #message-me-text {
+    margin-top: 2vh;
+    font-size: 5vh;
   }
 
   #welcome-portfolio {
