--- a/src/App.css
+++ b/src/App.css
@@ -478,7 +478,7 @@ and (orientation : landscape) {
   }
 
   #portfolio-slider {
-    height: 80vh;
+    height: 85vh;
   }
 
   #portfolio-carousel {
@@ -514,6 +514,10 @@ and (-webkit-device-pixel-ratio: 2){
   #about-text {
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+
+  #portfolio-slider {
+    height: 82vh;
   }
 }
 
@@ -556,6 +560,7 @@ and (orientation: portrait) {
 /* Google Pixel 2 landscape */
 @media only screen
 and (min-width: 731px)
+and (max-width: 750px)
 and (orientation: landscape) {
   body {
     overflow: scroll;
@@ -652,6 +657,141 @@ and (orientation: landscape) {
 
   #welcome-portfolio {
     font-size: 7vw;
+  }
+
+  #portfolio-text {
+    font-size: 3vw;
+  }
+
+  .project-text {
+    font-size: 2vw;
+  }
+
+  .links {
+    font-size: 2vw;
+    margin-bottom: 2vh;
+  }
+
+  #portfolio-slider {
+    height: 80vh;
+  }
+
+  #portfolio-carousel {
+    width: 70vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #project-text {
+    margin-bottom: 0vh;
+  }
+
+  #portfolio-gif {
+    width: 60vw;
+    height: 54vh;
+  }
+}
+
+/* Google Pixel 2XL landscape */
+@media only screen
+and (min-device-width: 820px)
+and (max-device-width: 840px)
+and (orientation: landscape) {
+  body {
+    overflow: scroll;
+    background-size: cover;
+  }
+
+  #nav {
+    width: 30vw;
+    left: -80vw;
+  }
+
+  @keyframes slide-in {
+    0% {
+      left: -80vw;
+    }
+    100% {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+  }
+
+  @keyframes slide-out {
+    from {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+    to {
+      left: -80vw;
+    }
+  }
+
+  .show-nav {
+    animation: slide-in 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .hide-nav {
+    animation: slide-out 1.5s;
+    animation-fill-mode: forwards;
+  }
+
+  .menu-link {
+    font-size: 4vh;
+  }
+
+  #top-line {
+    border-top: 0.2vh black solid;
+    margin: 8vh 40vh;
+  }
+
+  #name {
+    font-size: 8vh;
+  }
+
+  .typing {
+    font-size: 5vh;
+  }
+
+  #bottom-line {
+    border-top: 0.3vh black solid;
+    border-radius: 3em;
+    margin: 7vh 30vh;
+  }
+  
+  #about-name {
+    font-size: 10vh;
+  }
+
+  #about-text {
+    font-size: 4vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .photo {
+    height: 70vh;
+  }
+
+  #about-slider {
+    height: 75vh;
+    margin: auto;
+  }
+
+  #about-carousel {
+    width: 40vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #message-me-text {
+    margin-top: 2vh;
+    font-size: 5vh;
+  }
+
+  #welcome-portfolio {
+    font-size: 8vw;
   }
 
   #portfolio-text {
@@ -819,6 +959,159 @@ and (orientation: portrait) {
   #portfolio-gif {
     width: 70vw;
     height: 45vh;
+  }
+
+  #buttons {
+    margin-top: 0vh;
+  }
+}
+
+/* iPad landscape */
+@media only screen
+and (min-device-width: 840px)
+and (max-device-width: 1024px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (orientation: landscape) {
+  body {
+    overflow: scroll;
+    background-size: cover;
+  }
+
+  #nav {
+    width: 50vw;
+    left: -80vw;
+  }
+
+  @keyframes slide-in {
+    0% {
+      left: -80vw;
+    }
+    100% {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+  }
+
+  @keyframes slide-out {
+    from {
+      left: 0vw;
+      box-shadow: 0vh 2vh 53vh 12vh black;
+    }
+    to {
+      left: -80vw;
+    }
+  }
+
+  .show-nav {
+    animation: slide-in 1s;
+    animation-fill-mode: forwards;
+  }
+
+  .hide-nav {
+    animation: slide-out 1s;
+    animation-fill-mode: forwards;
+  }
+
+  .menu-link {
+    font-size: 5vh;
+  }
+
+  #menu-icon {
+    padding: 3vh;
+    font-size: 3vh;
+  }
+
+  #top-line {
+    border-top: 0.2vh black solid;
+    margin: 8vh 10vh;
+  }
+
+  #headshot {
+    height: 38vh;
+  }
+
+  #name {
+    font-size: 9vh;
+  }
+
+  .typing {
+    font-size: 4.5vh;
+  }
+
+  #bottom-line {
+    border-top: 0.2vh black solid;
+    margin: 8vh 10vh;
+  }
+
+  #about-name {
+    font-size: 9vh;
+  }
+
+  #about-text {
+    font-size: 3.5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .photo {
+    height: 68vh;
+    width: 49vw;
+  }
+
+  #about-slider {
+    height: 69vh;
+    margin: auto;
+  }
+
+  #about-carousel {
+    width: 52vw;
+    margin: auto;
+  }
+
+  #message-me-text {
+    margin-top: 2vh;
+    font-size: 4vh;
+  }
+
+  #welcome-portfolio {
+    font-size: 8vw;
+  }
+
+  #portfolio-text {
+    font-size: 4vw;
+  }
+
+  .project-text {
+    font-size: 3vw;
+  }
+
+  .links {
+    margin: 2vh;
+  }
+
+  .github {
+    font-size: 3vw;
+    margin-top: 5vh;
+    padding-top: 2vh;
+  }
+
+  #portfolio-slider {
+    height: 83vh;
+  }
+
+  #portfolio-carousel {
+    width: 75vw;
+    padding: 1vw;
+    margin: auto;
+  }
+
+  #project-text {
+    margin-bottom: 0vh;
+  }
+
+  #portfolio-gif {
+    width: 70vw;
+    height: 50vh;
   }
 
   #buttons {
