--- a/src/App.css
+++ b/src/App.css
@@ -1316,12 +1316,12 @@ and (min-device-width: 1024px) {
   }
 
   .menu-link {
-    font-size: 5vh;
+    font-size: 4vh;
   }
 
   #menu-icon {
     padding: 3vh;
-    font-size: 3vh;
+    font-size: 2.5vh;
   }
 
   #first-menu-link {
@@ -1338,11 +1338,11 @@ and (min-device-width: 1024px) {
   }
 
   #name {
-    font-size: 9vh;
+    font-size: 8vh;
   }
 
   .typing {
-    font-size: 4.5vh;
+    font-size: 4vh;
   }
 
   #bottom-line {
@@ -1419,6 +1419,7 @@ and (min-device-width: 1024px) {
   #portfolio-gif {
     width: 70vw;
     height: 65vh;
+    border-radius: 1em;
   }
 
   #buttons {
