--- a/src/App.css
+++ b/src/App.css
@@ -1316,7 +1316,25 @@ and (min-device-width: 1024px) {
   }
 
   .menu-link {
-    font-size: 4vh;
+    font-size: 3.5vh;
+  }
+
+  .menu-link:hover {
+    color: black;
+    opacity: 0.8;
+    font-weight: bold;
+  }
+
+  .menu-link:active {
+    color: black;
+    opacity: 0.8;
+    font-weight: bold;
+  }
+
+  .menu-link:visited {
+    color: black;
+    opacity: 0.8;
+    font-weight: bold;
   }
 
   #menu-icon {
