--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
 #nav {
   width: 80vw;
   height: 100vh;
-  background-color: pink;
+  background-color: white;
   position: fixed;
   left: -80vw;
   top: 0vh;
